[package]
name = "rebase-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8.1"
tokio = "1.38.0"
md5 = "0.7.0"
data-encoding = "2.6.0"
local-ip-address = "0.6.1"
libp2p = "0.53.2"
argon2 = "0.5.3"
hex = "0.4.3"
rand = "0.8.5"
base64 = "0.22.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
